fix package structure, attach javadoc, update README